# picologic

./: .gitignore  .travis.yml  Example.hs  LICENSE  README.md  default.nix  picologic.cabal  stack.yaml
src/: Picologic.hs
src/Picologic/: AST.hs  Lexer.hs  Main.hs  Parser.hs  Pretty.hs  Repl.hs  Solver.hs  Tseitin.hs
tests/: PrettyPrintTest.hs  Test.hs  tests.hs
