name:                picologic
version:             0.1
synopsis:            Utilities for symbolic predicate logic expressions
homepage:            https://github.com/sdiehl/picologic
-- description:         
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2014 Stephen Diehl
category:            Logic
build-type:          Simple
cabal-version:       >=1.10
Bug-Reports:         https://github.com/sdiehl/picologic/issues

Flag shell
  Description: Build the interactive shell
  Default:     False

library
  exposed-modules:     
    Picologic,
    Picologic.Solver,
    Picologic.AST,
    Picologic.Parser
  hs-source-dirs:      src
  other-extensions:    DeriveDataTypeable, BangPatterns
  build-depends:       
    base        >= 4.6 && <4.7,
    picosat     >= 0.1 && <0.2,
    containers  >= 0.5 && <0.6,
    mtl         >= 2.1 && <2.2,
    pretty      >= 1.1 && <1.2,
    parsec      >= 3.1 && <3.2
  default-language:    Haskell2010

executable picologic
  main-is:     Picologic/Main.hs
  if flag(shell)
    hs-source-dirs:      src
    other-modules: Picologic.Repl
    other-extensions:    DeriveDataTypeable, BangPatterns
    build-depends:       
      base        >= 4.6 && <4.7,
      picosat     >= 0.1 && <0.2,
      containers  >= 0.5 && <0.6,
      mtl         >= 2.1 && <2.2,
      pretty      >= 1.1 && <1.2,
      parsec      >= 3.1 && <3.2,
      process     >= 1.1 && <1.2,
      haskeline   >= 0.7 && <0.8
    default-language:    Haskell2010
  else
    buildable: False
